projects/demo/k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        volumeMounts: 
          - mountPath: /var/lib/postgresql/data
            name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: demo-pvc
