projects/demo/k8s/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
      nodePort: 30001
