projects/demo/k8s/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30002
