projects/demo/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: my-domain.com
    http:
      paths:
      - path: /client
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 5173
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 3000
